unpackaged/main/default/objects/pse__Forecast_Enhanced_Calculation__c/pse__Forecast_Enhanced_Calculation__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ForecastEnhancedCalculationHelp</customHelpPage>
    <description>Stores the parameters used to run a billing forecast calculation against a region, practice, or group.</description>
    <label>Billing Forecast Calculation</label>
    <nameField>
        <label>Billing Forecast Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Forecast Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>