unpackaged/main/default/objects/pse__Forecast_Enhanced_Calculation__c/fields/FFX_Related_Owner__c.field-meta.xml
<CustomField>
    <fullName>FFX_Related_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Owner of the Region, Practice, Group or Project</description>
    <label>Related Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Forecast_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>