unpackaged/main/default/objects/pse__Forecast_Enhanced_Calculation__c/fields/pse__Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__Batch_Id__c</fullName>
    <description>The batch ID for the billing forecast calculation process.</description>
    <externalId>true</externalId>
    <inlineHelpText>The batch ID for the billing forecast calculation process.</inlineHelpText>
    <label>Batch Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>