unpackaged/main/default/objects/pse__Forecast_Enhanced_Calculation__c/fields/pse__Batch_Process__c.field-meta.xml
<CustomField>
    <fullName>pse__Batch_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The batch process used by this billing forecast calculation.</description>
    <inlineHelpText>The batch process used by this billing forecast calculation.</inlineHelpText>
    <label>Batch Process</label>
    <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
    <relationshipLabel>Forecast Calculations</relationshipLabel>
    <relationshipName>Forecast_Enhanced_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>