unpackaged/main/default/objects/pse__Forecast_Enhanced_Calculation__c/fields/pse__Committed__c.field-meta.xml
<CustomField>
    <fullName>pse__Committed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the billing forecast has been committed and overrides can no longer be applied.</description>
    <inlineHelpText>Indicates the billing forecast has been committed and overrides can no longer be applied.</inlineHelpText>
    <label>Committed</label>
    <type>Checkbox</type>
</CustomField>