unpackaged/main/default/objects/pse__Forecast_Enhanced_Calculation__c/fields/pse__Region__c.field-meta.xml
<CustomField>
    <fullName>pse__Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The region for this billing forecast calculation.</description>
    <inlineHelpText>The region for this billing forecast calculation.</inlineHelpText>
    <label>Region</label>
    <referenceTo>pse__Region__c</referenceTo>
    <relationshipLabel>Billing Forecast Calculations</relationshipLabel>
    <relationshipName>Forecast_Enhanced_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>